--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
+                                    <li class="menu-item has-children"><a href="index.html">Início</a>
                                     </li>
                                     <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
@@ -143,8 +143,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nÃ³s</a></li>
-                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
+                                            <li><a href="about.html">Sobre nós</a></li>
+                                            <li><a href="history.html">Nossa História</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -195,10 +195,10 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Sobre nÃ³s</h1>
+                            <h1 class="page-title">Sobre nós</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">InÃ­cio</a></li>
-                                <li class="active">Sobre nÃ³s</li>
+                                <li><a href="index.html">Início</a></li>
+                                <li class="active">Sobre nós</li>
                             </ul>
                         </div>
                     </div>
