--- a/history.html
+++ b/history.html
@@ -131,7 +131,7 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
+                                    <li class="menu-item has-children"><a href="index.html">Início</a>
                                     </li>
                                     <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
@@ -143,8 +143,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nÃ³s</a></li>
-                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
+                                            <li><a href="about.html">Sobre nós</a></li>
+                                            <li><a href="history.html">Nossa História</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -196,10 +196,10 @@
                     <div class="col-lg-12">
                         <!--=== Page Banner Content ===-->
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Nossa HistÃ³ria</h1>
+                            <h1 class="page-title">Nossa História</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">InÃ­cio</a></li>
-                                <li class="active">Nossa HistÃ³ria</li>
+                                <li><a href="index.html">Início</a></li>
+                                <li class="active">Nossa História</li>
                             </ul>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                         <!--===  Section Content Box  ===-->
                         <div class="section-content-box mb-50">
                             <div class="section-title section-title-left wow fadeInDown mb-20">
-                                <span class="sub-title">Nossa HistÃ³ria</span>
+                                <span class="sub-title">Nossa História</span>
                                 <h2>HÃ¡ 27 anos Encantendo <br />
 
                                     paladares</h2>
