--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
+                                    <li class="menu-item has-children"><a href="index.html">Início</a>
                                     </li>
                                     <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
@@ -148,8 +148,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nÃ³s</a></li>
-                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
+                                            <li><a href="about.html">Sobre nós</a></li>
+                                            <li><a href="history.html">Nossa História</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -202,7 +202,7 @@
                         <!--=== Hero Content ===-->
                         <div class="hero-content">
                             <span class="tag-line wow fadeInDown" data-wow-delay=".5s">QUEM CONHECE, AMA!</span>
-                            <h1 class="wow fadeInUp" data-wow-delay=".6s">cada fatia uma <span>histÃ³ria</span></h1>
+                            <h1 class="wow fadeInUp" data-wow-delay=".6s">cada fatia uma <span>História</span></h1>
                             <p class="wow fadeInDown" data-wow-delay=".7s">Sabor incomparÃ¡vel, diversas opÃ§Ãµes salgadas
                                 e doces de dar Ã¡gua na boca, massa leve e recheio que conquista na primeira mordida.</p>
                             <div class="hero-button wow fadeInUp" data-wow-delay=".75s">
