--- a/menu-v2.html
+++ b/menu-v2.html
@@ -132,7 +132,7 @@
                             <!--=== Main Menu ===-->
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="menu-item has-children"><a href="index.html">InÃ­cio</a>
+                                    <li class="menu-item has-children"><a href="index.html">Início</a>
                                     </li>
                                     <li class="menu-item has-children"><a href="menu-v2.html">Cardápio</a>
                                         <!-- <ul class="sub-menu"> -->
@@ -144,8 +144,8 @@
                                     </li>
                                     <li class="menu-item has-children"><a href="about.html">sobre</a>
                                         <ul class="sub-menu">
-                                            <li><a href="about.html">Sobre nÃ³s</a></li>
-                                            <li><a href="history.html">Nossa HistÃ³ria</a></li>
+                                            <li><a href="about.html">Sobre nós</a></li>
+                                            <li><a href="history.html">Nossa História</a></li>
                                             <!-- <li><a href="chefs.html">Our Chefs</a></li> -->
                                             <!-- <li><a href="gallery.html">Our Gallery</a></li> -->
                                             <li><a href="faq.html">Perguntas Frequentes</a></li>
@@ -199,7 +199,7 @@
                         <div class="page-banner-content text-center">
                             <h1 class="page-title">Nosso Cardápio</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">InÃ­cio</a></li>
+                                <li><a href="index.html">Início</a></li>
                                 <li class="active">Cardápio</li>
                             </ul>
                         </div>
